--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Noto Serif SC', "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", serif;
     line-height: 1.8;
     color: var(--text-color);
     -webkit-font-smoothing: antialiased;
